# manga_scrapper

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  tox.ini
kissmanga/: __init__.py  chapters.py  config.py  exceptions.py  helpers.py  kissmanga.py  manga.py  mangas.py
kissmanga/aggregators/: chapters.py  manga.py  website.py
kissmanga/downloaders/: local_downloader.py
tests/kissmanga/: helpers.py  test_downloader.py
tests/kissmanga/data/: mangas_dict.py
