[tool.poetry]
name = "kissmanga"
version = "0.1.0"
description = ""
authors = ["Sami Saadawi <saadawisam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
kissmanga = "main:main"